Bug 168928 - Draw/Impress object is not removed from the view after being deleted using the Navigator
Summary: Draw/Impress object is not removed from the view after being deleted using th...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Draw (show other bugs)
Version:
(earliest affected)
26.2.0.0 alpha0+ master
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:26.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2025-10-17 23:51 UTC by Jim Raykowski
Modified: 2025-11-09 15:58 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
bug test file (15.98 KB, application/vnd.oasis.opendocument.presentation)
2025-10-17 23:51 UTC, Jim Raykowski
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jim Raykowski 2025-10-17 23:51:59 UTC
Created attachment 203399 [details]
bug test file

...until the object deleted is fully scrolled out of the view and then back in or the page is changed to a different page and then back to the page that the object was deleted from.

Steps to reproduce:
1) Open the attached test file
2) Open the Navigator (either the sidebar or floating version)
3) Single click on any of the objects shown in the Navigator objects tree
4) Press the Delete key

Results:
The object is removed from the Navigator and from the pages view window but not from the draw view window.

Additional info:

I am able to reproduce using gen, qt5/6 and gtk3/4 VCL plugins using:
Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: f504b90b046be0a4d8ba703f093cb68cc657b03f
CPU threads: 2; OS: Linux 6.14; UI render: default; VCL: gtk3
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

Seems this is the commit that changed the behavior:

commit e6a8c40e5051363d5825bd09131b86cf8a2b659b 
Author: Noel Grandin <noel.grandin@collabora.co.uk>
Date:   Tue, 30 Sep 2025 18:22:59 +0200 

    tdf#116975 Laggy behavior when clicking between table cells in impress
Comment 1 Sarah Lim 2025-11-05 11:10:22 UTC
Confirming in

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 620(Build:0)
CPU threads: 12; OS: Windows 11 X86_64 (build 26100); UI render: Skia/Raster; VCL: win
Locale: en-US (en_FI); UI: en-GB
Calc: threaded

tried this on Impress. Objects are removed from the Navigator window but not from the Slides. The object will be deleted if you go to a different slide then back.
Comment 2 Commit Notification 2025-11-08 12:11:28 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1c8b8d1fb80e6445aaeca2f2df6816d223277dbc

tdf#168928 Draw object not removed from the view after delete

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Jim Raykowski 2025-11-09 15:58:52 UTC
Thanks Noel!

I verify this is fixed in:

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 11314c7387dcbb84c7ebcb3bae5c3cd6a83b6524
CPU threads: 4; OS: Windows 11 X86_64 (build 26200); UI render: Skia/Vulkan; VCL: win
Locale: en-US (en_US); UI: en-US
Calc: CL threaded

and

Version: 26.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 11314c7387dcbb84c7ebcb3bae5c3cd6a83b6524
CPU threads: 4; OS: Linux 5.15; UI render: default; VCL: qt5 (cairo+xcb) and x11
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded