tdf#168928 Draw object not removed from the view after delete

regression from
  commit e6a8c40e5051363d5825bd09131b86cf8a2b659b
  Author: Noel Grandin <noel.grandin@collabora.co.uk>
  Date:   Tue Sep 30 14:54:37 2025 +0200
  tdf#116975 Laggy behavior when clicking between table cells in impress

Change-Id: I9f430aece90badae7e0911ef82fffa84fb707755
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/193582
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Jenkins